--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -5,8 +5,7 @@ $colors: (
     "greenBlue-color": #0097A7,
     "darkBlue-color": #161E21,
     "lightGrey-color": #D4D4D4,
-    "mediumGrey-color": #949494,
-    "violet-color": #1D1524
+    "mediumGrey-color": #949494
 );
 
 @function color($color-name) {
