--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -4,3 +4,11 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
+::selection{
+    background-color: color(greenBlue-color);
+}
+
+html{
+    scroll-behavior: smooth;
+}
