--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -2,57 +2,48 @@
     background-color: color(black-color);
     color: color(white-color);
 
-
     .aboutMe {
         display: flex;
-        width: 80%;
+        justify-content: center;
+        align-items: center;
         margin: auto;
-        justify-content: flex-start;
-        padding: 110px;
-        height: 80vh;
+        column-gap: 40px;
+        height: 620px;
 
         img {
-            margin-left: 230px;
-            z-index: 1;
+            width: 420px;
+            height: 400px;
         }
 
         .para__2 {
             font-size: 36px;
             text-transform: uppercase;
-            margin-bottom: 40px;
-            margin-left: 30px;
             font-weight: 300;
         }
 
         .para__3 {
             line-height: 2;
-            margin-left: 30px;
             font-weight: 400;
+            text-align: justify;
+            text-align-last: center;
+            margin-top: 40px;
+            width: 520px;
         }
 
         .flex {
             display: flex;
             flex-direction: column;
-            align-self: flex-start;
-            margin-left: 65px;
-            margin-top: 100px;
-        }
-
-        .line4 {
-            position: relative;
-            margin-top: -10px;
-            margin-bottom: 40px;
-            margin-left: 30px;
-
-            &::after {
-                content: "";
-                position: absolute;
-                bottom: 2px;
-                left: 0;
-                height: 0;
-                width: 100px;
-                border-bottom: 3px solid color(greenBlue-color);
-            }
+            align-self: center;
         }
     }
+}
+
+footer {
+    height: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: color(greenBlue-color);
+    color: color(white-color);
 }
