--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -1,8 +1,7 @@
 .contact {
     @include flexCenter(row);
     padding: 20px 0 20px 0;
-    background-color: color(darkBlue-color);
-
+    background-color: color(black-color);
 
     a {
         margin: 0 15px 0 0;
