--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,9 @@
-// Screen resolution: 1920 X 1080
 @import url('https://fonts.googleapis.com/css2?family=Roboto');
 @import 'colors';
 @import 'config';
 @import 'mixins';
 @import 'components/header';
-@import 'components/backgroundImage';
+@import 'components/homepage';
 @import 'components/news';
 @import 'components/event';
 @import 'components/about';
